playing with current location

--- a/app/assets/javascripts/locations.js.erb
+++ b/app/assets/javascripts/locations.js.erb
@@ -5,7 +5,7 @@ $(document).ready(function() {
       maxZoom: 18,
       id: 'sallyamoore.nkikgok3',
       // Token is hidden. Don't push token.
-      accessToken:
+      accessToken: ''
   }).addTo(map);
 
   map.locate({setView: true, maxZoom: 16});
