--- a/app/assets/javascripts/locations.js.erb
+++ b/app/assets/javascripts/locations.js.erb
@@ -1,34 +1,44 @@
-var map;
+var overpassPrefix = "http://overpass-api.de/api/interpreter?data=",
+  map;
 
 $(document).ready(function() {
   L.mapbox.accessToken = 'pk.eyJ1Ijoic2FsbHlhbW9vcmUiLCJhIjoiY2lmZm53MmlkOHA2YnNka25wd3BmNDB3dyJ9.F5FdTfUY5XLbzWMcWpRp2A';
   map = L.mapbox.map('map', 'sallyamoore.nkikgok3')
-      .setView([52.3081, 4.7642], 13);
-      L.tileLayer('http://{s}.tile.thunderforest.com/cycle/{z}/{x}/{y}.png').addTo(map);
+    .setView([52.3081, 4.7642], 13);
 
-      var bounds = (map.getBounds());
-      // order in api query is south, west, north, east
+  L.tileLayer('http://{s}.tile.thunderforest.com/cycle/{z}/{x}/{y}.png')
+    .addTo(map);
+  var swLat = (map.getBounds()._southWest.lat);
+  var swLon = (map.getBounds()._southWest.lng);
+  var neLat = (map.getBounds()._northEast.lat);
+  var neLon = (map.getBounds()._northEast.lng);
+  // Note: order of directions in api query is south, west, north, east
 
-      $.getJSON('http://overpass-api.de/api/interpreter?data=[out:json];(relation["type"="network"]["network"="rcn"]('
-        + bounds._southWest.lat + ','
-        + bounds._southWest.lng + ','
-        + bounds._northEast.lat + ','
-        + bounds._northEast.lng +
-        ');node(r)->.nodes;rel(r);way(r););out body;>;out skel qt;',
-        function(data) {
-          console.log(data.elements);
-          for (var i = 0; i < data.elements.length - 1; i++) {
-            if (data.elements[i].tags && data.elements[i].lat)  {
-              marker = new L.circleMarker([data.elements[i].lat, data.elements[i].lon])
-              marker.setIcon(L.mapbox.marker.icon({
-                "marker-color": "#FF9F1F"
-              }))
-                // add a popup with rcn_ref # to marker:
-              	// .bindPopup(data.elements[i].tags.rcn_ref)
-        				.addTo(map);
-            }
-          }
-      });
+  // var rcnLayer = L.mapbox.featureLayer().addTo(map);
+
+  // rcnLayer.on('layeradd', function(event) {
+    // var marker = event.layer,
+    //     feature = marker.feature;
+    //
+    // marker.setIcon(L.icon(feature.properties.icon));
+
+  $.getJSON(overpassPrefix + '[out:json];(relation["type"="network"]["network"="rcn"]('
+    + swLat + ',' + swLon + ',' + neLat + ',' + neLon +
+    ');node(r)->.nodes;rel(r);way(r););out body;>;out skel qt;',
+    function(data) {
+      // create clickable markers for each bike node in bounds
+      for (var i = 0; i < data.elements.length - 1; i++) {
+        if (data.elements[i].tags && data.elements[i].lat)  {
+          marker = new L.circleMarker([data.elements[i].lat, data.elements[i].lon], {
+            color: "#01D298",
+            opacity: 1.0,
+            fill: false,
+            weight: 3.5,
+            radius: 11 })
+    			.addTo(map);
+        }
+      }
+  });
 
   // calls function to find current location. Need to set to occur only with click in nav.
   // map.locate({setView: true, maxZoom: 16});
