--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,29 @@ body {
   padding: 0;
 }
 
+
+.nav {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 100;
+}
+
+.login {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 100;
+}
+
+.login-links {
+  text-align: center;
+  margin: 0 auto;
+}
+
 #map {
   position:absolute;
   top:0;
