Login with github is up and running. A couple of tests are behaving strangely; trying to figure out why.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% if flash[:error] %>
+  <h5 class="alert alert-danger"><%= flash[:error] %></h5>
+<% end %>
 
 <%= yield %>
 
