--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,21 +6,25 @@ body {
   padding: 0;
 }
 
+.register {
+  margin-top: 3em;
+}
 
 .nav {
   position: absolute;
   bottom: 0;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
-  z-index: 100;
+  background-color: rgba(255, 255, 255, 0.7);
+  z-index: 1000;
 }
 
 .login {
   position: absolute;
-  height: 100%;
+  margin: 0;
   width: 100%;
+  height: 100%;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   z-index: 100;
 }
 
