--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Bespoke</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.4, maximum-scale=1.4, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
   <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
   <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
@@ -20,11 +20,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% if flash[:error] %>
-  <h5 class="alert alert-danger"><%= flash[:error] %></h5>
-<% end %>
 
-<%= yield %>
+  <div class="container-fluid center-block">
 
+    <% if flash[:error] %>
+      <h5 class="alert alert-danger"><%= flash[:error] %></h5>
+    <% end %>
+
+    <%= yield %>
+
+  </div>
 </body>
 </html>
