--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,6 +33,26 @@ body {
   margin: 0 auto;
 }
 
+.logout {
+  position: absolute;
+  background-color: rgba(255, 255, 255, .7);
+  top: 0;
+  right: 0;
+  padding: .5em;
+  font-weight: bold;
+  z-index: 100;
+}
+
+.nav-bar {
+  display: none;
+  position: absolute;
+  background-color: rgba(255, 255, 255, .7);
+  padding: 1em;
+  width: 100%;
+  bottom: 0;
+  z-index: 100;
+}
+
 #map {
   position:absolute;
   top:0;
