--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,9 @@
     <% if flash[:error] %>
       <h5 class="alert alert-danger"><%= flash[:error] %></h5>
     <% end %>
+    <% if flash[:alert] %>
+      <h5 class="alert alert-warning"><%= flash[:alert] %></h5>
+    <% end %>
   </div>
 
 
