Address search form returns location objects. WIP showing options and rendering selected on map.

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -64,7 +64,7 @@
   <form class="form-inline">
     <div class="form-group">
       <label for="location-search"><h5>Start Location: </h5></label>
-      <input type="text" name="location-search", class="form-control">
+      <input type="text" name="location-search", class="form-control location-query">
       <button class="btn btn-default location-submit" type="submit">
         <span class="find-location col-xs-4 fa fa-search ig-icon" aria-hidden="true" data-toggle="tooltip" title="go"></span>
       </button>
