Routing: show alert if no 'my location' or queried location. Extracted alert display into function to DRY code.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,7 +40,7 @@ body {
   text-align: center;
 }
 
-div.alert.bad-query {
+div.alert.alert-danger {
   margin-bottom: 9.5em;
 }
 
@@ -93,7 +93,7 @@ div.alert.bad-query {
 }
 
 div.leaflet-control-attribution, div.leaflet-compact-attribution {
-  bottom: 5.8em;
+  bottom: 70px;
 }
 
 #map {
