--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,9 @@
     <% if flash[:alert] %>
       <h5 class="alert alert-warning"><%= flash[:alert] %></h5>
     <% end %>
+    <% if flash[:success] %>
+      <h5 class="alert alert-success"><%= flash[:success] %></h5>
+    <% end %>
   </div>
 
 
