Password reset via email/token

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,9 @@
     <% if flash[:success] %>
       <h5 class="alert alert-success"><%= flash[:success] %></h5>
     <% end %>
+    <% if flash[:info] %>
+      <h5 class="alert alert-info"><%= flash[:info] %></h5>
+    <% end %>
   </div>
 
 
