--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -17,6 +17,7 @@
 
 			<div class="form-group col-sm-12">
 					<%= f.label :password %>
+          <%= link_to "(forgot password)", new_password_reset_path %>
 					<%= f.password_field :password, class: "form-control"  %>
 			</div>
 
