--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -71,6 +71,9 @@
   </form>
 </div>
 
+<div class="save-location">
+  <span class="fa fa-user-plus fa-2x"></span>
+</div>
 <!-- <div class="my-account">
 
 </div> -->
