--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,19 @@ body {
   padding: 0;
 }
 
+.title {
+  text-align: center;
+  color: #01D298;
+}
+
+.user-info-title {
+  color: #F60131;
+}
+
+.user-info {
+  font-size: 18px;
+}
+
 .css-icon {
   display: block;
   line-height: 43px;
@@ -63,7 +76,7 @@ div.alert.alert-danger, div.alert.node-saved, {
   margin: 0 auto;
 }
 
-.logout, .login-or-register {
+.logout {
   display: none;
   position: absolute;
   background-color: rgba(255, 255, 255, .7);
