--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,6 +17,9 @@
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
       <%= f.submit "Save changes", class: "btn btn-primary" %>
+
+      <%= link_to "Go back", user_path(@user.id), class: "btn btn-default" %>
+
     <% end %>
 
   </div>
