--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid col-sm-6">
   <h3>SIGN UP!</h3>
 
   <%= form_for @user, method: :post, class: "user" do |f| %>
