--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,9 +91,10 @@ div.alert.alert-danger, div.alert.node-saved, {
   background-color: rgba(255, 255, 255, .7);
   top: 0;
   right: 0;
-  padding: .5em;
+  padding: .5em .5em 0 .5em;
   font-weight: bold;
   z-index: 100;
+  border-radius: 10px;
 }
 
 .location-search {
@@ -130,12 +131,25 @@ div.leaflet-control-attribution, div.leaflet-compact-attribution {
   z-index: 99;
 }
 
+.directions-icon {
+  display: none;
+  position:absolute;
+  top: 10%;
+  right: .4em;
+  height: 40px;
+  width: 40px;
+  padding: .4em;
+  text-align: center;
+  vertical-align: middle;
+  background-color: rgba(255, 255, 255, .6);
+  border-radius: 40px;
+  z-index: 99;
+}
+
 #map {
   position:absolute;
   top:0;
   bottom:0;
   width:100%;
   height: 100%;
-  // transform: scale(1.4);
-  // transform-origin: top left;
 }
