Show directions on click

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -79,9 +79,10 @@
   <span class="fa fa-user-plus fa-2x"></span>
 </div>
 
-<div>
-  <div class="directions-icon">
-    <span class="fa fa-arrow-circle-right fa-2x"></span>
-  </div>
-  <div class="directions"></div>
+<div class="directions-icon">
+  <span class="fa fa-arrow-circle-down fa-2x" title="Show directions"></span>
+</div>
+
+<div id="directions">
+  <div id="instructions"></div>
 </div>
