--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -133,17 +133,31 @@ div.leaflet-control-attribution, div.leaflet-compact-attribution {
 
 .directions-icon {
   display: none;
-  position:absolute;
+  position: absolute;
+  background-color: rgba(255, 255, 255, .6);
+  border-radius: 40px;
   top: 10%;
   right: .4em;
   height: 40px;
   width: 40px;
   padding: .4em;
   text-align: center;
-  vertical-align: middle;
-  background-color: rgba(255, 255, 255, .6);
-  border-radius: 40px;
   z-index: 99;
+
+}
+
+#directions {
+  display: none;
+  padding: 2.2em;
+  position: absolute;
+  max-width: 300px;
+  min-width: 200px;
+  z-index: 98;
+  background: rgba(0, 0, 0, .7);
+  top: 0;
+  right: 0;
+  bottom: 70px;
+  overflow: auto;
 }
 
 #map {
