OmniAuth for Google

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -4,9 +4,14 @@
   <div class='login'>
     <h2>Login with:</h2>
 
-    <div class="login-links"><%= link_to provider_login_path(provider: :github) do %>
-      <span class="fa fa-github fa-3x center ig-icon" aria-hidden="true" data-toggle="tooltip" title="github login"></span>
-    <% end %></div>
+    <div class="login-links">
+      <%= link_to provider_login_path(provider: :google_oauth2) do %>
+        <span class="fa fa-google-plus-square fa-3x center col-sm-1" aria-hidden="true" data-toggle="tooltip" title="github login"></span>
+      <% end %>
+      <%= link_to provider_login_path(provider: :github) do %>
+        <span class="fa fa-github fa-3x center col-sm-1" aria-hidden="true" data-toggle="tooltip" title="github login"></span>
+      <% end %>
+    </div>
 
     <h2>or via email:</h2>
 
