--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -2,7 +2,9 @@
 
 <% if session[:user_id].nil? %>
   <div class='login'>
-    <h2>Login with:</h2>
+    <div>
+      <h2>Login with:</h2>
+    </div>
 
     <div class="login-links">
       <%= link_to provider_login_path(provider: :google_oauth2) do %>
@@ -13,7 +15,9 @@
       <% end %>
     </div>
 
-    <h2>or via email:</h2>
+    <div>
+      <h2>or via email:</h2>      
+    </div>
 
     <%= form_for(:session, url: login_path)  do |f| %>
 			<div class="form-group col-sm-6">
