--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,38 +1,38 @@
 <div id='map' ></div>
 
 <% if session[:user_id].nil? %>
-  <div class='login'>
+  <div class='login col-sm-6 col-sm-offset-3'>
     <div>
       <h2>Login with:</h2>
     </div>
 
-    <div class="login-links">
+    <div class="login-links center">
       <%= link_to provider_login_path(provider: :google_oauth2) do %>
-        <span class="fa fa-google-plus-square fa-3x center col-sm-1" aria-hidden="true" data-toggle="tooltip" title="github login"></span>
+        <span class="fa fa-google-plus-square fa-3x center" aria-hidden="true" data-toggle="tooltip" title="github login"></span>
       <% end %>
       <%= link_to provider_login_path(provider: :github) do %>
-        <span class="fa fa-github fa-3x center col-sm-1" aria-hidden="true" data-toggle="tooltip" title="github login"></span>
+        <span class="fa fa-github fa-3x center" aria-hidden="true" data-toggle="tooltip" title="github login"></span>
       <% end %>
     </div>
 
-    <div>
-      <h2>or via email:</h2>      
+    <div class='row'>
+      <h2>or via email:</h2>
     </div>
 
-    <%= form_for(:session, url: login_path)  do |f| %>
-			<div class="form-group col-sm-6">
-				<%= f.label :username %>
-				<%= f.text_field :username, class: "form-control" %>
-			</div>
+    <div class="form-group">
+      <%= form_for(:session, url: login_path)  do |f| %>
+  			<%= f.label :username %>
+  			<%= f.text_field :username, class: "form-control form-group" %>
 
-			<div class="form-group col-sm-6">
-					<%= f.label :password %>
-          <%= link_to "(forgot password)", new_password_reset_path %>
-					<%= f.password_field :password, class: "form-control"  %>
-			</div>
+  			<%= f.label :password %>
+        <%= link_to "(forgot password)", new_password_reset_path %>
+  			<%= f.password_field :password, class: "form-control form-group"  %>
 
-			<%= f.submit "Log In", class: "btn btn-primary" %>
-		<% end %>
+  			<%= f.submit "Log In", class: "btn btn-primary form-group" %>
+      <% end %>
+    </div>
+
+
 
 		<!-- register button -->
     <div class="register">
