--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,26 +1,28 @@
-<h1>Update your profile</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
+    <h1>Update your profile:</h1>
+    <div class='form-group'>
+      <%= form_for(@user) do |f| %>
 
-      <%= f.label :username %>
-      <%= f.text_field :username, class: 'form-control' %>
+        <%= f.label :username %>
+        <%= f.text_field :username, class: 'form-control' %>
 
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+        <%= f.label :email %>
+        <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+        <%= f.label :password %>
+        <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Save changes", class: "btn btn-primary" %>
+        <%= f.submit "Save changes", class: "btn btn-primary" %>
+        <%= link_to "Go back", user_path(@user.id), class: "btn btn-default" %>
 
-      <%= link_to "Go back", user_path(@user.id), class: "btn btn-default" %>
+      <% end %>
+    </div>
 
-    <% end %>
 
   </div>
 </div>
