Watches and shows user location in realtime when a route has been create from 'my location' click.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -85,6 +85,10 @@ div.alert.alert-danger, div.alert.node-saved, {
   margin: 0 auto;
 }
 
+.fa-google-plus-square, .fa-github {
+  margin: 0 .2em;
+}
+
 .logout {
   display: none;
   position: absolute;
